# ease-design

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
.agent/: README.md
a11y/: package.json  vitest.config.ts
design-os/: pyproject.toml
design-os/plugins/figma/src/design_os_figma/: __init__.py
design-os/src/design_os/: cli.py  evolution_core.py  harvest_core.py  harvest_ledger.py  harvest_model.py  harvest_parse.py  heartbeat_core.py  kernel.py  report_style.py
design-os/src/design_os/commands/: audit.py  doctor.py  evolution.py  harvest.py  heartbeat.py  heartbeat_render.py  heartbeat_runners.py  heartbeat_runners_learning.py  reference.py  vr_matrix.py
design-os/src/design_os/commands/librarian/: __init__.py  collect.py  core.py
design-os/src/design_os/commands/reference/: __init__.py  add.py  manage.py  store.py
design-os/src/design_os/prompts/: harvest-extract-v1.md
design-os/tests/: test_audit.py  test_command_evolution.py  test_command_harvest.py  test_command_heartbeat.py  test_doctor.py  test_evolution_core.py  test_evolution_dynamic_gate.py  test_harvest_core.py  test_harvest_model.py  test_heartbeat_core.py  test_librarian_collect.py  test_plugin_figma.py  test_reference_manage.py  test_vr_matrix.py
design-os/tests/fixtures/evolution-dynamic/design/: component-registry.json  design.tokens.json  ds.manifest.json  heartbeat.json  soul.md
design-os/tests/fixtures/harvest/: campaign-report.md
design-os/tests/goldens/: root-help.txt
docs/: dogfood-from-url-v1.1-2026-05-27.md
feedbacks/: 260717-dana-desktop-onboarding.md  README.md
figma-agent/: README.md  package.json
knowledge/: README.md  accessibility.md  authoring-standard.md  color-science.md  component-catalog.md  design-agents.md  (+19 more)
(+620 files in other folders)
