[project]
name = "design-os"
version = "0.1.0"
description = "The DESIGN-OS conductor — a Typer umbrella over the deterministic `ui` kernel."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ease-design contributors" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["typer==0.26.8"]

[project.urls]
Homepage = "https://github.com/jangtrinh/ease-design"
Repository = "https://github.com/jangtrinh/ease-design"

[project.scripts]
design-os = "design_os.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/design_os"]

[dependency-groups]
# design-os-figma is the first real plugin (a workspace member). Dev-installing it makes its
# `design_os.plugins` entry point discoverable in the test env — the whole point of Phase 05.
dev = ["pytest>=8", "design-os-figma"]

# uv workspace: `design-os` is the root; every plugin lives under plugins/* as a member sharing
# this project's single uv.lock (es-typer §8 — monorepo → uv workspaces).
[tool.uv.workspace]
members = ["plugins/*"]

[tool.uv.sources]
design-os-figma = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: end-to-end test that shells out to the real `ui` kernel (skipped when absent)",
]
